--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,36 @@
-version: '3.1'
+version: '2'
 
 services:
-
+  webserver:
+      image: nginx:latest
+      ports:
+        - 8080:8080
+      volumes:
+      - ./src:/var/www/html/wp-content/:rw
+      - ./.wp/:/var/www/html/:rw
+      - ./config/nginx:/etc/nginx/conf.d/:ro
+      - ./logs:/var/log/nginx/:rw
+      depends_on:
+        - wordpress
   wordpress:
-    image: wordpress
-    restart: always
-    depends_on:
-      - mariadb
-    ports:
-      - 8080:80
+    image: wordpress:php8.3-fpm
+    volumes:
+      - ./src:/var/www/html/wp-content/:rw
+      - ./.wp/:/var/www/html/:rw
+      - ./config/wp/wp-config.php:/var/www/html/wp-config.php:rw
     environment:
-      WORDPRESS_DB_HOST: mariadb
+      WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: wpuser
       WORDPRESS_DB_PASSWORD: secret
       WORDPRESS_DB_NAME: wordpressdb
-    volumes:
-      - ./src:/var/www/html
-
-  mariadb:
+    depends_on:
+      - db
+  db:
     image: mariadb
-    restart: always
+    volumes:
+      - ./db/:/var/lib/mysql
     environment:
       MARIADB_ROOT_PASSWORD: rootsecret
       MARIADB_USER: wpuser
       MARIADB_PASSWORD: secret
       MARIADB_DATABASE: wordpressdb
-    volumes:
-      - ./db:/var/lib/mysql
